# crc32c

./: meson.build
include/crc32c/: meson.build
